<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="@drawable/back_ui"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:src="@drawable/instagramm"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_edt_username"
        android:layout_marginTop="15dp"
        android:id="@+id/edtUsername"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_edt_full_name"
        android:layout_marginTop="15dp"
        android:id="@+id/edtFullName"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_edt_email"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:id="@+id/edtEmail"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_edt_password"
        android:layout_marginTop="15dp"
        android:id="@+id/edtPassword"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:text="@string/txt_register"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_check_already_have_an_account_login"
        android:textColor="@color/white"
        android:id="@+id/txtLogin"
        android:layout_marginTop="10dp"/>

</LinearLayout>