<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="#FFFFFF"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:src="@drawable/logo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_edt_email"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:id="@+id/edtEmail"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_edt_password"
        android:drawableEnd="@drawable/ic_visibility_off_black_24dp"
        android:layout_marginTop="15dp"
        android:id="@+id/edtPassword"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/txt_login"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_background"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_check_don_t_have_an_account_register"
        android:id="@+id/txtRegister"
        android:layout_marginTop="10dp"/>

</LinearLayout>