<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        android:background="?android:attr/windowBackground">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolBar"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close_black_24dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/iconClose"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_edit_profile"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_toEndOf="@id/iconClose"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_save"
                    android:id="@+id/txtSave"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorPrimary"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:id="@+id/imgProfile"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_change_photo"
            android:layout_gravity="center"
            android:id="@+id/txtChangePhoto"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtFullName"
            android:hint="@string/hint_edt_full_name"
            android:layout_marginTop="20dp"
            app:met_floatingLabel="normal"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtUsername"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_edt_username"
            app:met_floatingLabel="normal"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtBio"
            android:hint="@string/hint_edt_bio"
            android:layout_marginTop="8dp"
            app:met_floatingLabel="normal"/>

    </LinearLayout>

</LinearLayout>