<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:id="@+id/imgProfile"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUsername"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_toEndOf="@id/imgProfile"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:id="@+id/img"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtLike"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="#A6000000"
                    android:visibility="invisible"
                    android:text="@string/txt_like"/>

                <TextView
                    android:id="@+id/txtComment"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="#A6000000"
                    android:visibility="invisible"
                    android:text="@string/txt_comment"/>

                <TextView
                    android:id="@+id/txtShare"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="#A6000000"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:text="@string/txt_share"/>

                <TextView
                    android:id="@+id/txtMore"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:visibility="invisible"
                    android:background="#A6000000"
                    android:text="@string/txt_more"/>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:id="@+id/imgLike"
                android:src="@drawable/ic_favorite_border_black_24dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:id="@+id/imgComment"
                android:src="@drawable/ic_comment_black_24dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:id="@+id/imgShare"
                android:src="@drawable/near"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:id="@+id/imgMore"
                android:src="@drawable/ic_more_vert_black_24dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>