<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolBar"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:id="@+id/txtUsername"
                    android:textColor="@color/colorPrimaryDark"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgOption"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_menu_black_24dp"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/topBar"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imgProfile"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#f23b5a"
                        android:visibility="gone"
                        android:id="@+id/imgStories"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#afafaf"
                        android:visibility="gone"
                        android:id="@+id/imgStoriesSeen"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="4dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtPost"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_gravity="center"
                                android:textStyle="bold"
                                android:textSize="18sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_posts"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtFollowers"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_gravity="center"
                                android:textStyle="bold"
                                android:textSize="18sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_followers"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtFollowing"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_gravity="center"
                                android:textStyle="bold"
                                android:textSize="18sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_following"/>

                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:id="@+id/btnEditProfile"
                        android:background="@drawable/button_black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:id="@+id/midBar"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/txtFullname"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/txtBio"
                    android:maxLines="5"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewStories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:id="@+id/lastBar"
                android:background="@drawable/button_black"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/imgFotos"
                    android:src="@drawable/ic_apps_black_24dp"
                    style="?android:attr/buttonBarButtonStyle"/>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_bookmark_border_black_24dp"
                    android:id="@+id/imgSaveFotos"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerviewFotos"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerviewFotoSave"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>